--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="page-wrapper overflow-hidden">
+    <div class="page-wrapper">
         <svg xmlns="http://www.w3.org/2000/svg" width="700" height="700" viewBox="0 0 1024 1024" class="pokeball">
             <path id="pkmn-go-menu" fill="currentColor" stroke="none" stroke-width="1" d="M 512.00,359.18
                            C 512.00,359.18 512.00,359.18 512.00,359.18
@@ -50,7 +50,7 @@
         </svg>
         <header class="container py-10">
             <div class="row">
-                <form class="column">
+                <form class="column" id="search-form">
                     <input type="search" id="search" name="id" placeholder="Search Pokemon">
                 </form>
             </div>
